# eulogy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  delete_me_2.py  pyproject.toml  setup.py
examples/: _other_module.py  example.py
src/eulogy/: __init__.py  config.py  eulogy.py
tests/: test_interface.py
